# fireball-fireball

./: .gitignore  .project  .travis.yml  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
src/: MACHINES  Makefile  Makefile.in  a.GLOBAL  b.FUNCTIONS  c.SYSTEM  d.FUNCTIONS_EXTRA  e.FDATA  g.XC_FUNCTIONALS  h.SOLVESH  i.GRID  include  j.ASSEMBLERS  k.DASSEMBLERS  l.SCF  libs  m.MD  makefile  n.NAC  n.NAMD  o.OUTPUT  p.HARRIS  p.THEORY  q.DOGS  runme_before_compile.sh  u.UTIL
src/x.DRIVERS/: Makefile  fireball-MDET.f90  fireball.F90  fireball.f90  fireball_new.f90
tests/: Makefile
tests/01.H2_separation/: 002.inp  011.inp  015.inp  019.inp  027.inp  038.inp  042.inp  047.inp  059.inp  064.inp  079.inp  080.inp  086.inp  098.inp  100.inp  109.inp  114.inp  115.inp  125.inp  130.inp  148.inp  154.inp  158.inp  161.inp  166.inp  176.inp  178.inp  184.inp  197.inp
tests/01.H_dimer/: 001.inp  001.xyz  003.inp  004.inp  005.inp  006.inp  007.inp  008.inp  009.inp  010.inp  012.inp  013.inp  014.inp  016.inp  017.inp  018.inp  020.inp  021.inp  022.inp  023.inp  024.inp  025.inp  026.inp  028.inp  029.inp  030.inp  031.inp  032.inp  033.inp  034.inp  035.inp  036.inp  037.inp  039.inp  040.inp  041.inp  043.inp  044.inp  045.inp  046.inp  (+135 more)
tests/02.Si2_separation/: 002.inp  012.inp  017.inp  026.inp  027.inp  031.inp  032.inp  042.inp  050.inp  058.inp  063.inp  067.inp  070.inp  075.inp  076.inp  080.inp  087.inp  088.inp  097.inp  099.inp  113.inp  115.inp  127.inp  130.inp  135.inp  137.inp  138.inp  140.inp  142.inp  144.inp  152.inp  155.inp  157.inp  161.inp  169.inp  175.inp  176.inp  178.inp  184.inp  188.inp  (+1 more)
tests/02.Si_dimer/: 001.inp  001.xyz  003.inp  004.inp  005.inp  006.inp  007.inp  008.inp  009.inp  010.inp  011.inp  013.inp  014.inp  015.inp  016.inp  018.inp  019.inp  020.inp  021.inp  022.inp  023.inp  024.inp  025.inp  028.inp  029.inp  030.inp  033.inp  034.inp  035.inp  036.inp  037.inp  038.inp  039.inp  040.inp  041.inp  043.inp  044.inp  045.inp  046.inp  047.inp  (+124 more)
tests/03.CO2_rotation/: 001.inp  002.inp  003.inp  004.inp  005.inp  006.inp  007.inp  008.inp  009.inp  010.inp  011.inp  012.inp  013.inp  014.inp  015.inp  016.inp  017.inp  018.inp  019.inp  020.inp  021.inp  022.inp  023.inp  024.inp  025.inp  026.inp  027.inp  028.inp  029.inp  030.inp  031.inp  032.inp  033.inp  034.inp  035.inp  036.inp  037.inp  038.inp  039.inp  040.inp  (+170 more)
tests/04.Si_dimer_mdet/: 100.inp  100.mdet.inp  structures.inp
tests/05.azobenzene/: 001.inp  002.inp  004.inp  4001.inp  4003.inp  4004.inp
tests/06.benzene/: Fdata.inp  benzene.inp  structures.inp
tests/06.methane/: 001.inp  002.inp  003.inp  004.inp  005.inp  006.inp  007.inp  008.inp  009.inp  010.inp  011.inp  012.inp  013.inp  014.inp  015.inp  016.inp  017.inp  018.inp  019.inp  020.inp  021.inp  022.inp  023.inp  024.inp  025.inp  026.inp  027.inp  028.inp  029.inp  030.inp  031.inp  032.inp  033.inp  034.inp  035.inp  036.inp  037.inp  038.inp  039.inp  040.inp  (+170 more)
tests/07.azobenzene/: 4002.inp  structures.inp
tests/07.benzene/: WARNINGS  benzene.CHARGES  benzene.NEIGHBORS  benzene.NEIGHBORS_PP  benzene.denmat  benzene.eigen  benzene.inp  benzene.xyz  structures.inp
tests/09.azobenzene/: 003.inp  Fdata  Fdata.inp
tests/10.graphene/: 001.inp  Fdata.inp  graphene_stru.py  remove.sh  structures.inp
tests/11.C_simple_cube/: 001.ENERGIES  001.inp
tests/12.CO2_relaxation/: 001.CHARGES  001.cdcoeffs  001.eigen  001.xyz  fort.54  structures.inp  test.f90
